<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view"
        android:textAlignment="center"
        style="@style/NameStyle" />

    <EditText
        android:id="@+id/name_edit"
        android:hint="@string/name_edit"
        android:layout_width="match_parent"
        android:textAlignment="center"
        style="@style/NameStyle"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/done_botton"
        android:layout_gravity="center_horizontal"
        android:text="@string/done"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/namenick_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:visibility="gone"
        android:paddingBottom="@dimen/small_padding"
        android:background="@color/colorAccent"
        style="@style/NameStyle" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/men_star"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bio" />
    </ScrollView>
</LinearLayout>